eddited index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
     <title>Orçamentos de Bordados</title>
 </head>
 <body>
+    <header>Logo dtex</header>
+   
+    <main class="container">
+        <div class="acoes">
+            <input type="text" class="pesquisa">
+            <input type="button" value="Novo" class="novoOrcamento">  
+        </div>
+        <ul class="recentes">
+            <li class="bordado"></li>
+        </ul>
+    </main>
     
+    <footer> Leo de Vanda produções &copy;</footer>
 </body>
 </html>
