--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Orçamentos de Bordados</title>
+
+    <link rel="stylesheet" href="./src/css/reset.css">
+    <link rel="stylesheet" href="./src/css/style.css">
+
 </head>
 <body>
-    <header>Logo dtex</header>
+
+    <header>
+        <img src="./src/img/logo-dtex.webp" alt="Logo Dtex">
+    </header>
    
     <main class="container">
         <div class="acoes">
@@ -19,5 +26,6 @@
     </main>
     
     <footer> Leo de Vanda produções &copy;</footer>
+
 </body>
 </html>
