first day css almost made

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
    
     <main class="container">
         <div class="acoes">
-            <input type="text" class="pesquisa">
+            <input type="text" class="pesquisa" placeholder="Procurar orçamento">
             <input type="button" value="Novo" class="novoOrcamento">  
         </div>
         <ul class="recentes">
