--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
             <input type="button" value="Novo" class="novoOrcamento">  
         </div>
         <ul class="recentes">
-            <li class="bordado"></li>
+            <li class="bordado">
+                
+            </li>
         </ul>
     </main>
     
