fix(layout): tornar o container das variáveis responsivo

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <ul class="recentes">            
             </ul>
 
-            <h6 class="load-more">Carregar mais</h6>
+            <h6 class="loadMore">Carregar mais</h6>
 
         </section>
 
