feat - cria filtro dinamico no input de pesquisa

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>
         
         <div class="botoes bg-bege-claro-padrao">
-            <input type="text" class="pesquisa bg-bege-claro-padrao" placeholder="Procurar orçamento">
+            <input type="text" class="pesquisa bg-bege-claro-padrao" placeholder="Pesquisar orçamento">
             <input type="button" value="Novo" id="botaoNovoOrcamento" data-modal="modalNovoOrcamento" class="botao-h4 bg-bege-padrao">  
         </div>        
 
