--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./src/css/reset.css">    
     <link rel="stylesheet" href="./src/css/style.css">
     <link rel="stylesheet" href="./src/css/color.css">
@@ -108,20 +108,26 @@
                 <div class="variable-group">
                     <div class="matriz-field" data-key="">
                         <h6>Criar Matriz?</h6>
-                        <div class="toggle"></div>
+                        <div class="toggle bg-bege-escuro-padrao"></div>
                     </div>
+
+                    <hr class="divLine">
+
                     <div class="mat-cliente">
                         <h6>Material do Cliente?</h6>
-                        <div class="toggle"></div>
+                        <div class="toggle bg-bege-escuro-padrao"></div>
                     </div>
+
+                    <hr class="divLine">
+
                     <div class="urgente">
                         <h6>Urgente?</h6>
-                        <div class="toggle"></div>
+                        <div class="toggle bg-bege-escuro-padrao"></div>
                     </div>
+
+                    <hr class="divLine">
+
                 </div>
-
-
-                <hr class="divLine">
                     
                 <button id="calcular" class="bg-bege-padrao">Calcular valores</button>
                 <button id="salvarOrcamento" type="submit">Salvar Orcamento</button>
