style - changed entire site color baseline

--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
     <dialog id="modalNovoOrcamento" class="modalNovoOrcamento bg-bege-padrao">
         <form method="dialog">            
 
-            <div class="headerModal bg-bege-escuro-alt">
-                <h3>Novo Orcamento</h3>
+            <div class="headerModal bg-bege-escuro-padrao">
+                <h4>Novo Orcamento</h4>
                 <button class="fechar-modal bg-bege-escuro-alt">
                     <i class="fa-solid fa-xmark"></i>
                 </button>
