style - more details changes to color pallete

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </footer>
 
 
-    <dialog id="modalNovoOrcamento" class="modalNovoOrcamento bg-bege-padrao">
+    <dialog id="modalNovoOrcamento" class="modalNovoOrcamento bg-bege-claro-padrao">
         <form method="dialog">            
 
             <div class="headerModal bg-bege-escuro-padrao">
@@ -84,7 +84,7 @@
             <div class="bodyModal">
 
 
-                <div class="nomeMatriz bg-bege-padrao">
+                <div class="nomeMatriz bg-bege-claro-padrao">
                     <h6>Nome da Matriz</h6>
                     <input type="text" id="nomeMatriz" placeholder="Digite um nome" required>  
                 </div>
@@ -108,21 +108,21 @@
                 <div class="variable-group">
                     <div class="matriz-field" data-key="">
                         <h6>Criar Matriz?</h6>
-                        <div class="toggle bg-bege-escuro-padrao"></div>
+                        <div class="toggle bg-bege-padrao"></div>
                     </div>
 
                     <hr class="divLine">
 
                     <div class="mat-cliente">
                         <h6>Material do Cliente?</h6>
-                        <div class="toggle bg-bege-escuro-padrao"></div>
+                        <div class="toggle bg-bege-padrao"></div>
                     </div>
 
                     <hr class="divLine">
 
                     <div class="urgente">
                         <h6>Urgente?</h6>
-                        <div class="toggle bg-bege-escuro-padrao"></div>
+                        <div class="toggle bg-bege-padrao"></div>
                     </div>
 
                     <hr class="divLine">
