--- a/index.html
+++ b/index.html
@@ -54,10 +54,9 @@
             <input type="button" value="Novo" id="botaoNovoOrcamento" data-modal="modalNovoOrcamento" class="botao-h4 bg-bege-padrao">  
         </div>        
 
-        <section class="lista bg-bege-claro-padrao">
+        <section class="recentes bg-bege-claro-padrao">
 
-            <ul class="recentes">            
-            </ul>
+            <h6 class="loadMore" style="display: none;">Carregar Mais</h6>           
 
         </section>
 
