feat - toggle buttons now can have bollean data on it

--- a/index.html
+++ b/index.html
@@ -38,9 +38,12 @@
 
         <section  class="box-mestre bg-bege-claro-padrao">
 
-            <section class="recentes"></section>
+            <section class="recentes">
+            </section>
             
-            <h6 class="loadMore" style="display: none;">Carregar Mais</h6>
+            <h6 class="loadMore" style="display: none;">
+                Carregar Mais
+            </h6>
 
         </section>
 
